...

    <TextView
        android:id="@+id/shopName"
        android:layout_width="384dp"
        android:layout_height="49dp"
        android:fontFamily="@font/abril_fatface"
        android:text="Capitol Coffee Works"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
